--- a/Resources/InapphelpStoryboard-iPad.storyboard
+++ b/Resources/InapphelpStoryboard-iPad.storyboard
@@ -405,7 +405,7 @@
                                                         <constraint firstAttribute="width" constant="270" id="KQ7-Wu-tKn"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j9x-gX-77i" customClass="HSBubbleLeftArrow">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j9x-gX-77i" customClass="IAHBubbleLeftArrow">
                                                     <rect key="frame" x="16" y="70" width="8" height="10"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
